# sdk-alif

./: README.md
alif/: .checkpatch.conf  .gitignore  .gitlint  CMakeLists.txt  CODEOWNERS  Jenkinsfile  Kconfig  README.md  test_samples.groovy  west.yml
alif/applications/testapp/: CMakeLists.txt  overlay-sed.conf  prj.conf
alif/applications/testapp/boards/: alif_b1_dk_rtss_he.conf  alif_b1_fpga_rtss_he_ble.conf
alif/applications/testapp/src/: main.c
alif/automation/: Jenkinsfile
alif/boards/arm/alif_b1_devkit/: alif_b1_dk_rtss_he_ospi0.overlay
alif/boards/arm/alif_e1c_devkit/: alif_e1c_dk_rtss_he_ospi0.overlay
alif/boards/arm/alif_e3_devkit/: alif_e3_dk_rtss_he_hp_UART0_RTS_CTS.overlay
alif/boards/arm/alif_e7_devkit/: alif_e7_dk_rtss_he_LPUART.overlay  alif_e7_dk_rtss_he_ospi1.overlay  alif_e7_dk_rtss_hp_ospi1.overlay
alif/doc/: README.md
alif/doc/release_notes/: README.md
alif/doc/release_notes/source/: conf.py  index.rst  links.txt  release_note.rst
alif/doc/sdk/: Makefile  conf.py  index.rst  links.txt  substitutions.txt
alif/doc/sdk/connectivity/: index.rst
alif/doc/sdk/connectivity/bluetooth/: audio.rst  audio_presentation_layer.rst  audio_samples.rst  index.rst  rom_abi.rst  sample_audiosink.rst  sample_audiosource.rst  sample_basic_profile.rst
alif/doc/user_guide/: README.md
alif/doc/user_guide/source/: building_application_binaries.rst  conf.py  index.rst  introduction.rst  links.txt  overview.rst  programming_an_app.rst
alif/drivers/: CMakeLists.txt  Kconfig
alif/drivers/clock/: CMakeLists.txt  Kconfig
alif/drivers/clock/si570/: CMakeLists.txt  Kconfig  si570.c  si570.h
alif/drivers/codec/: CMakeLists.txt  Kconfig
alif/drivers/codec/wm8904/: CMakeLists.txt  Kconfig  wm8904.c  wm8904.h
alif/drivers/i2s/: CMakeLists.txt  Kconfig
alif/drivers/i2s/i2s_sync/: CMakeLists.txt  Kconfig  i2s_sync.c  i2s_sync_int.h
alif/dts/bindings/: alif,i2s-sync.yaml  cirrus,wm8904.yaml  skyworks,si570.yaml
alif/include/drivers/: i2s_sync.h
alif/include/ethosu/models/keyword_spotting_cnn_small_int8/: input.h  model_u55_128.h  model_u55_256.h  output.h
alif/lib/ethosu_utils/: CMakeLists.txt
alif/samples/bluetooth/: bluetooth.rst
alif/samples/bluetooth/common/: batt_svc.c  batt_svc.h  shared_control.h
alif/samples/bluetooth/le_audio/broadcast_sink/: CMakeLists.txt  Kconfig  README.rst  overlay-auracast_16_2.conf  overlay-auracast_24_2.conf  overlay-dbg.conf  prj.conf
alif/samples/bluetooth/le_periph/: CMakeLists.txt  README.rst  prj.conf
alif/samples/bluetooth/le_periph_batt/: CMakeLists.txt  README.rst  prj.conf
alif/samples/bluetooth/le_periph_blinky/: CMakeLists.txt  README.rst  prj.conf
alif/samples/bluetooth/le_periph_blps/: CMakeLists.txt  README.rst  prj.conf
alif/samples/bluetooth/le_periph_cgms/: CMakeLists.txt  README.rst  prj.conf
alif/samples/bluetooth/le_periph_cpps/: CMakeLists.txt  README.rst  prj.conf
alif/samples/bluetooth/le_periph_cscps/: CMakeLists.txt  README.rst  prj.conf
alif/samples/bluetooth/le_periph_glps/: CMakeLists.txt  README.rst  prj.conf
alif/samples/bluetooth/le_periph_hr/: CMakeLists.txt  README.rst  prj.conf
alif/samples/bluetooth/le_periph_htpt/: CMakeLists.txt  README.rst  prj.conf
alif/samples/bluetooth/le_periph_past/: CMakeLists.txt  README.rst  prj.conf
alif/samples/bluetooth/le_periph_plxp/: CMakeLists.txt  README.rst  prj.conf
alif/samples/bluetooth/le_periph_prxp/: CMakeLists.txt  README.rst  prj.conf
alif/samples/bluetooth/le_periph_rscps/: CMakeLists.txt  README.rst  prj.conf
alif/samples/bluetooth/le_periph_ws/: CMakeLists.txt  README.rst  prj.conf
alif/samples/bluetooth/mesh_light_bulb/: CMakeLists.txt  prj.conf  readme.rst
alif/samples/bluetooth/smp_svr/: CMakeLists.txt  README.rst  prj.conf
alif/samples/drivers/adc/: README.rst  prj.conf  sample.yaml
alif/samples/drivers/cmp/: CMakeLists.txt  README.rst  prj.conf  sample.yaml
alif/samples/drivers/crc/: README.rst  prj.conf  sample.yaml
alif/samples/drivers/display/: CMakeLists.txt  README.rst
alif/samples/drivers/i2c_dw/: CMakeLists.txt  README.rst  prj.conf  sample.yaml
alif/samples/drivers/i2s_sync/: CMakeLists.txt  prj.conf  readme.md
alif/samples/drivers/lpi2c/: CMakeLists.txt  README.rst  prj.conf  sample.yaml
alif/samples/drivers/si570/: prj.conf  readme.md
alif/samples/drivers/spi_dw/: CMakeLists.txt  README.rst  prj.conf  sample.yaml
alif/samples/drivers/spi_flash/: CMakeLists.txt  README.rst  prj.conf
alif/samples/drivers/video/: CMakeLists.txt  README.rst  prj.conf
alif/samples/drivers/wm8904/: CMakeLists.txt  prj.conf  readme.md
alif/samples/lc3/lc3_codec/: CMakeLists.txt  prj.conf  readme.md
alif/samples/modules/littlefs/: CMakeLists.txt  prj.conf
alif/samples/sensor/bme680/: prj.conf  sample.yaml
alif/scripts/: requirements-matter.txt  requirements.txt
alif/scripts/bluetooth/presentation_compensation/: plot_debug_data.py
alif/scripts/gitlint/: rules.py
alif/subsys/: CMakeLists.txt  Kconfig
alif/subsys/bluetooth/: CMakeLists.txt  Kconfig
alif/subsys/bluetooth/host/: Kconfig
alif/subsys/bluetooth/le_audio/: CMakeLists.txt  Kconfig  Kconfig.lc3  Kconfig.presentation_compensation  audio_decoder.c  audio_decoder.h  audio_encoder.c  audio_encoder.h  audio_i2s_common.c  audio_i2s_common.h  audio_queue.c  audio_queue.h  audio_sink_i2s.c  audio_sink_i2s.h  audio_source_i2s.c  audio_source_i2s.h  audio_utils.c  audio_utils.h  iso_datapath_ctoh.c  iso_datapath_ctoh.h  iso_datapath_htoc.c  iso_datapath_htoc.h  presentation_compensation.c  presentation_compensation.h  sdu_queue.c  sdu_queue.h
alif/subsys/ieee802154/: CMakeLists.txt  Kconfig
alif/subsys/ieee802154/msglib/: CMakeLists.txt
alif/subsys/ieee802154/shell/: CMakeLists.txt
alif/subsys/modules/: CMakeLists.txt
alif/subsys/modules/ethosu/: CMakeLists.txt  Kconfig
alif/subsys/powermgr/: CMakeLists.txt  Kconfig
alif/subsys/powermgr/shell/: CMakeLists.txt
alif/zephyr/: module.yml
zephyr/soc/arm/alif_balletto/: CMakeLists.txt  Kconfig  Kconfig.defconfig  Kconfig.soc
(+599 files in other folders)
